--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -29,7 +29,7 @@ financebench_id_00005: working-capital
 financebench_id_05915: fa-turnover-ratio
 financebench_id_00790: capital-intensiveness
 financebench_id_04103: cash-conversion-cycle
-financebench_id_03471: working-capital-ratio
+financebench_id_03471: work-cap-ratio  #
 financebench_id_04854: free-cash-flow
 financebench_id_10136: retention-ratio
 financebench_id_10499: inv-turnover-ratio  #
