--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -16,8 +16,8 @@ financebench_id_00222: quick-ratio  #
 financebench_id_04254: unadjusted-ebitda
 financebench_id_00070: working-capital
 financebench_id_02608: net-margin-avg
-financebench_id_00685: gross-margin-comp
-financebench_id_04660: working-capital-ratio
+financebench_id_00685: gross-margin-comp  #
+financebench_id_04660: work-cap-ratio  #
 financebench_id_00678: gross-margin-comp
 financebench_id_00585: effective-tax-rate
 financebench_id_03473: roa  #
