--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -980,6 +980,8 @@ financebench_id_00678:
     the answer contains calculated Gross Margin percentage or decimal values for 2021 and 2022,
     and concludes that such metric increased
 
+  evaluator-unreliable: true
+
 
 financebench_id_01290:
   doc: BOEING_2022_10K
