--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -68,16 +68,27 @@ inv-turnover-ratio:
 # ========================================
 
 cogs-margin:
-  task:
-    Calculate the cost of goods sold (COGS) % margin of {COMPANY} for {YEAR}.
-    COGS margin = (revenue - cost of sales) / revenue
+  task: |-
+    Calculate `Cost of Goods Sold (COGS) Margin` of {COMPANY} for {PERIOD} fiscal period,
+    as percentage value according to formula:
+
+    `Cost of Goods Sold (COGS) Margin` = (
+      `Cost of Goods Sold, a.k.a. COGS, or Cost of Sales, or Cost of Revenue` /
+      `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
+    )
+
   sub-plans:
-    - task:
-        In dollars, what was the cost of sales in the given fiscal year(s)?
-        operating expenses or income statement.
-    - task:
-        In dollars, what was the revenue (net sales) in the given fiscal
-        year(s)?
+    # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
+    - task: |-
+        What are values in dollars of:
+        - `Cost of Goods Sold, a.k.a. COGS, or Cost of Sales, or Cost of Revenue`; and
+        - `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
+        (or most similar-meaning reported line items to those)
+
+        on `(Consolidated) (Comprehensive) Income Statement,
+        a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) (Comprehensive) Operations Statement` of {COMPANY}
+        for {PERIOD} fiscal period?
 
 
 gross-margin-comp:
@@ -179,6 +190,7 @@ unadjusted-ebitda:
     - task:
         In dollars, what was the depreciation and amortization in the given
         fiscal year(s)?
+
 
 ebitda-margin:
   task: |-
