--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -2,16 +2,30 @@
 # ====================================
 
 asset-turnover-ratio:
-  task:
-    Calculate the asset turnover ratio of {COMPANY} for {YEAR}. Asset turnover
-    ratio = net sales / (average total assets between {YEAR-1} and {YEAR})
+  task: |-
+    Calculate `(Total) Asset Turnover Ratio` of {COMPANY} over {PERIOD} annual fiscal period
+    as decimal value according to formula:
+
+    `(Total) Asset Turnover Ratio` = (
+      `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales` /
+      `average Total Assets, typically between two consecutive fiscal year-ends`
+    )
+
   sub-plans:
-    - task:
-        In dollars, what was the net sales in the given fiscal year(s)? sales or
-        income statement.
-    - task:
-        In dollars, what were the total assets in the given fiscal year(s)?
-        total assets on the balance sheet
+    - task: >-
+        What is value in dollars of `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
+        (or most similar-meaning reported line item)
+        on `(Consolidated) (Comprehensive) Income Statement,
+        a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) (Comprehensive) Operations Statement` of {COMPANY}
+        for {PERIOD} annual fiscal period?
+
+    - task: |-
+        What is simple arithmetic average value in dollars of `Total Assets` (or most similar-meaning reported line item)
+        on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position` of {COMPANY}
+        as of two following points in time:
+        - one-year-before previous annual fiscal period end preceding {PERIOD}; and
+        - {PERIOD} annual fiscal period end?
 
 
 fa-turnover-ratio:
