--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -14,7 +14,7 @@ financebench_id_00684: gross-margin-comp  #
 financebench_id_03069: da-margin
 financebench_id_00222: quick-ratio  #
 financebench_id_04254: unadjusted-ebitda
-financebench_id_00070: working-capital
+financebench_id_00070: work-cap
 financebench_id_02608: net-margin-avg
 financebench_id_00685: gross-margin-comp  #
 financebench_id_04660: work-cap-ratio  #
@@ -25,7 +25,7 @@ financebench_id_09724: cogs-margin  #
 financebench_id_06272: dividend-payout-ratio
 financebench_id_10130: days-payable-outstanding
 financebench_id_02981: op-margin-avg
-financebench_id_00005: working-capital
+financebench_id_00005: work-cap
 financebench_id_05915: fa-turnover-ratio
 financebench_id_00790: capital-intensiveness
 financebench_id_04103: cash-conversion-cycle
@@ -41,7 +41,7 @@ financebench_id_00552: debt
 financebench_id_04458: ebitda-margin
 financebench_id_04302: cogs-margin
 financebench_id_04080: inv-turnover-ratio  #
-financebench_id_00080: working-capital
+financebench_id_00080: work-cap
 financebench_id_03620: unadjusted-ebitda  # TODO: but also less CapEx for question
 financebench_id_04481: ebitda-margin
 financebench_id_00216: quick-ratio  #
