--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -23,7 +23,7 @@ asset-turnover-ratio:
         of {COMPANY} for {PERIOD} annual fiscal period?
 
     - task: |-
-        What is simple arithmetic average value in dollars of `Total Assets`
+        What is simple arithmetic average of two values in dollars of `Total Assets`
         (or most similar-meaning reported line item)
 
         on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position`
