--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -22,6 +22,8 @@ asset-turnover-ratio:
 
         of {COMPANY} for {PERIOD} annual fiscal period?
 
+    # retrieve individual starting & ending balance values only, without taking simple arithmetic average
+    # because RAG LMs may not be good at calculation & mathematical reasoning
     - task: |-
         What are values in dollars of `Total Assets` (or most similar-meaning reported line item)
 
