--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -37,7 +37,7 @@ asset-turnover-ratio:
 
 fa-turnover-ratio:
   task: |-
-    Calculate `Fixed Asset Turnover Ratio` of {COMPANY} over {PERIOD} annual fiscal period
+    Calculate `Fixed Asset Turnover Ratio` of {COMPANY} for {PERIOD} annual fiscal period
     as decimal value according to formula:
 
     `Fixed Asset Turnover Ratio` = (
@@ -49,16 +49,23 @@ fa-turnover-ratio:
     - task: >-
         What is value in dollars of `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
         (or most similar-meaning reported line item)
-        on `(Consolidated) (Comprehensive) Income Statement,
-        a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
-        or (Consolidated) (Comprehensive) Operations Statement` of {COMPANY}
-        for {PERIOD} annual fiscal period?
 
+        on `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+        (or most similar-meaning statement)
+
+        of {COMPANY} for {PERIOD} annual fiscal period?
+
+    # retrieve individual starting & ending balance values only, without taking simple arithmetic average
+    # because RAG LMs may not be good at calculation & mathematical reasoning
     - task: |-
-        What is simple arithmetic average value in dollars of
-        `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)` (or most similar-meaning reported line item)
-        on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position` of {COMPANY}
-        as at two following points in time:
+        What are values in dollars of `(Net) Fixed Assets, a.k.a. (Net) Property, Plant & Equipment (PP&E)`
+        (or most similar-meaning reported line item)
+
+        on one same `(Consolidated) Balance Sheet, a.k.a. Statement of (Consolidated) Financial Position`
+        (or most similar-meaning statement)
+
+        of {COMPANY} as at two following points in time:
         - one-year-before previous annual fiscal period end preceding {PERIOD}; and
         - {PERIOD} annual fiscal period end?
 
