--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -45,9 +45,9 @@ financebench_id_00499:
   correctness: |-
     the answer opines that 3M is actually managing capital assets efficiently, and justifies such opinion
     by certain calculated financial ratio metric value(s) showing at least one of the following:
-    - Capital Expenditure (CapEx) is not high relative to Revenue;
-    - Fixed Assets is not large as proportion of Total Assets; or
-    - Return on Assets (RoA) is quite good
+    - Fixed Assets is not large as proportion of Total Assets;
+    - Capital Expenditure (CapEx) is not high relative to Revenue; and/or
+    - Return on (Total) Assets (RoA or RoTA) is quite good
 
 
 financebench_id_01226:
@@ -63,7 +63,7 @@ financebench_id_01226:
 
   category: 0-RETRIEVE
   correctness: |-
-    the answer mentions some salient changes among those discussed below:
+    the answer mentions at least 1 salient change among those discussed below:
 
     COST OF SALES:
     Cost of sales, measured as a percent of sales, increased in 2022 when compared to the same period last year.
@@ -119,8 +119,8 @@ financebench_id_00807:
 
   category: 4-CALC-AND-JUDGE
   correctness: >-
-    the answer contains a calculated Quick Ratio decimal value that is slightly less than 1.00,
-    or, alternatively, a calculated percentage value that is slightly less than 100%
+    the answer contains a calculated Quick Ratio decimal value that is over 0.75 but less than 1.00,
+    or, alternatively, a calculated percentage value that is over 75% but less than 100%
 
 
 financebench_id_00941:
@@ -169,6 +169,8 @@ financebench_id_02987:
     the answer contains a calculated Fixed Asset Turnover Ratio decimal value that is in the range from 23.00 to 25.00
     (if the answer is a single number, assume that it is that calculated Fixed Asset Turnover Ratio decimal value)
 
+  evaluator-unreliable: true
+
 
 financebench_id_07966:
   doc: ACTIVISIONBLIZZARD_2019_10K
@@ -198,7 +200,7 @@ financebench_id_04735:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Operating Cash Flow Ratio decimal value that is in the range from 0.60 to 0.70,
+    the answer contains a calculated Operating Cash Flow Ratio decimal value that is in the range from 0.6000 to 0.7000,
     or, alternatively, a calculated percentage value that is in the range from 60.00% to 70.00%
     (if the answer is a single number, assume that it is that calculated Operating Cash Flow Ratio metric value)
 
@@ -247,6 +249,8 @@ financebench_id_00438:
     the answer contains calculated Operating Margin percentage or decimal values for 2021 and 2022,
     and concludes that such metric decreased
 
+  evaluator-unreliable: true
+
 
 financebench_id_00591:
   doc: ADOBE_2022_10K
@@ -271,7 +275,7 @@ financebench_id_01319:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer states 0, zero, and/or that restructuring costs are not explicitly found
+    the answer states 0, zero, and/or that restructuring costs are not explicitly reported
 
 
 financebench_id_00540:
@@ -394,7 +398,8 @@ financebench_id_00799:
   category: 4-CALC-AND-JUDGE
   correctness: >-
     the answer contains calculated Quick Ratio decimal or percentage values for 2022 and 2023,
-    and concludes that such metric increased
+    both over 0.50 but less than 0.75 (if decimal), or, alternatively, over 50% but less than 75% (if percentage);
+    the answer then concludes that such metric increased
 
 
 financebench_id_01079:
@@ -517,8 +522,8 @@ financebench_id_00222:
 
   category: 4-CALC-AND-JUDGE
   correctness: >-
-    the answer contains a calculated Quick Ratio decimal value that is greater than 1.00,
-    or, alternatively, a calculated percentage value that is greater than 100%
+    the answer contains a calculated Quick Ratio decimal value that is in the range from 1.40 to 1.70,
+    or, alternatively, a calculated percentage value that is in the range from 140% to 170%
 
 
 financebench_id_00995:
@@ -1036,8 +1041,8 @@ financebench_id_03473:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Return on Assets (RoA) percentage value that is in the range from 1.00% to 2.00%,
-    or, alternatively, a calculated decimal value that is in the range from 0.0100 to 0.0200
+    the answer contains a calculated Return on Assets (RoA) percentage value that is in the range from 0.90% to 2.00%,
+    or, alternatively, a calculated decimal value that is in the range from 0.0090 to 0.0200
     (if the answer is a single number, assume that it is that calculated Return on Assets (RoA) metric value)
 
   evaluator-unreliable: true
@@ -1069,7 +1074,7 @@ financebench_id_06272:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Dividend Payout Ratio decimal value that is in the range from 0.78 to 0.82,
+    the answer contains a calculated Dividend Payout Ratio decimal value that is in the range from 0.7800 to 0.8200,
     or, alternatively, a calculated percentage value that is in the range from 78.00% to 82.00%
     (if the answer is a single number, assume that it is that calculated Dividend Payout Ratio metric value)
 
@@ -1433,7 +1438,7 @@ financebench_id_03718:
   answer: 0.4%
   page(s): '63'
 
-  category: 3-CALC-COMPLEX
+  category: 2-CALC-CHANGE
   correctness: >-
     the answer contains a calculated CAGR percentage value that is in the range from 0.400% to 0.500%
     (if the answer is a single number, assume that it is that calculated CAGR percentage value)
@@ -1877,6 +1882,8 @@ financebench_id_00283:
     the answer contains a quantity that is in the range from 70.00 to 80.00,
     or, alternatively, in the range from 70.00 million to 80.00 million
 
+  evaluator-unreliable: True
+
 
 financebench_id_00724:
   doc: Pfizer_2023Q2_10Q
@@ -2024,8 +2031,8 @@ financebench_id_00216:
 
   category: 4-CALC-AND-JUDGE
   correctness: >-
-    the answer contains a calculated Quick Ratio decimal value that is less than 1.00,
-    or, alternatively, a calculated percentage value that is less than 100%
+    the answer contains a calculated Quick Ratio decimal value that is in the range from 0.40 to 0.70,
+    or, alternatively, a calculated percentage value that is in the range from 40% to 70%
 
 
 financebench_id_00215:
