--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1113,6 +1113,8 @@ financebench_id_02981:
     or, alternatively, a calculated decimal value that is in the range from 0.0900 to 0.1100
     (if the answer is a single number, assume that it is that calculated Average Operating Income Margin metric value)
 
+  evaluator-unreliable: true
+
 
 financebench_id_01346:
   doc: CORNING_2022_10K
