--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -172,14 +172,29 @@ gross-margin-comp:
         and assess whether `Gross (Income or Profit or Earnings) Margin` meaningfully degraded or improved
 
 
-unadjusted-operating-income:
-  task: Calculate the unadjusted operating income of {COMPANY} for {YEAR}.
+op-margin-3y-avg:
+  task: >-
+    Calculate 3-year average `(Unadjusted) Operating (Income or Profit or Earnings) Margin` of {COMPANY}
+    as percentage value
+
   sub-plans:
-    - task:
-        In dollars, what was the operating income in the given fiscal year(s)?
-    - task:
-        In dollars, what was the net sales in the given fiscal year(s)? sales or
-        income statement
+    - task: >-
+        What are values in dollars of:
+        - `(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))`; and
+        - `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
+        (or most similar-meaning reported line items to those)
+
+        on one same `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+        (or most similar-meaning statement)
+
+        of {COMPANY} for past 3 fiscal years?
+
+    - task: >-
+        Calculate 3-year average `(Unadjusted) Operating (Income or Profit or Earnings) Margin`
+        by dividing sum of `(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))
+        by sum of `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,
+        and return division result as percentage value
 
 
 op-margin-comp:
