--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -147,7 +147,7 @@ gross-margin-comp:
           `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
         )
 
-        for following two fiscal periods:
+        for following two annual fiscal periods:
         - one-year-before previous annual fiscal period preceding {PERIOD}; and
         - {PERIOD} annual fiscal period
 
@@ -163,7 +163,7 @@ gross-margin-comp:
             or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
             (or most similar-meaning statement)
 
-            of {COMPANY} for following two fiscal periods:
+            of {COMPANY} for following two annual fiscal periods:
             - one-year-before previous annual fiscal period preceding {PERIOD}; and
             - {PERIOD} annual fiscal period?
 
@@ -199,37 +199,38 @@ op-margin-3y-avg:
 
 op-margin-comp:
   task: >-
-    Calculate change and assess degradation/improvement in `(Unadjusted) Operating (Income or Profit) Margin` of {COMPANY}
-    from corresponding one-year-preceding previous fiscal period to current {PERIOD} fiscal period
+    Calculate change and assess degradation/improvement in
+    `(Unadjusted) Operating (Income or Profit or Earnings) Margin` of {COMPANY}
+    from corresponding one-year-preceding previous annual fiscal period to current {PERIOD} annual fiscal period
 
   sub-plans:
     - task: |-
-        Calculate `(Unadjusted) Operating (Income or Profit) Margin` for following two fiscal periods:
-        - one-year-before previous fiscal period preceding {PERIOD}; and
-        - {PERIOD} fiscal period
+        Calculate `(Unadjusted) Operating (Income or Profit or Earnings) Margin` as percentage values according to formula:
 
-        as percentage values according to formula:
-
-        `(Unadjusted) Operating (Income or Profit) Margin` = (
-          `(Unadjusted) Operating Income, a.k.a. Operating Profit` /
-          `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
+        `(Unadjusted) Operating (Income or Profit or Earnings) Margin` = (
+          `(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))` /
+          `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
         )
+
+        for following two annual fiscal periods:
+        - one-year-before previous annual fiscal period preceding {PERIOD}; and
+        - {PERIOD} annual fiscal period
 
       sub-plans:
         # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
         - task: |-
             What are values in dollars of:
-            - `(Unadjusted) Operating Income, a.k.a. Operating Profit`; and
-            - `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
+            - `(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))`; and
+            - `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
             (or most similar-meaning reported line items to those)
 
-            on one same `(Consolidated) (Comprehensive) Income Statement,
-            a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
-            or (Consolidated) (Comprehensive) Operations Statement` of {COMPANY}
+            on one same `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+            or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+            (or most similar-meaning statement)
 
-            for following two fiscal periods:
-            - one-year-before previous fiscal period preceding {PERIOD}; and
-            - {PERIOD} fiscal period?
+            of {COMPANY} for following two annual fiscal periods:
+            - one-year-before previous annual fiscal period preceding {PERIOD}; and
+            - {PERIOD} annual fiscal period?
 
     - task: >-
         Calculate difference between two calculated `(Unadjusted) Operating (Income or Profit) Margin` percentage values
