--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -266,40 +266,41 @@ ebitda:
 
 ebitda-margin:
   task: |-
-    Calculate `(Unadjusted) EBITDA Margin` of {COMPANY} for {PERIOD} fiscal period, as percentage value according to formula:
-    
+    Calculate `(Unadjusted) EBITDA Margin` of {COMPANY} for {PERIOD} fiscal period as percentage value according to formula:
+
     `(Unadjusted) EBITDA Margin` = (
-      (`(Unadjusted) Operating Income, a.k.a. Operating Profit` +
+      (`(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))` +
        `Depreciation & Amortization, a.k.a. D&A (of Fixed Assets or Property, Plant & Equipment (PP&E))`)
-      / `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
+      / `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
     )
 
   sub-plans:
     # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
     - task: |-
         What are values in dollars of:
-        - `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`; and
-        - `(Unadjusted) Operating Income, a.k.a. Operating Profit`
+        - `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`; and
+        - `(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))`
         (or most similar-meaning reported line items to those)
 
-        on `(Consolidated) (Comprehensive) Income Statement,
-        a.k.a. (Consolidated) (Comprehensive) Profit-and-Loss (P&L) Statement,
-        or (Consolidated) (Comprehensive) Operations Statement` of {COMPANY}
-        for {PERIOD} fiscal period?
-      
+        on `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+        (or most similar-meaning statement)
+
+        of {COMPANY} for {PERIOD} fiscal period?
+
     - task: >-
         What is value in dollars of `Depreciation & Amortization, a.k.a. D&A (of Fixed Assets or Property, Plant & Equipment (PP&E))`
         (or most similar-meaning reported line item)
         on `Cash Flow(s) Statement` of {COMPANY} for {PERIOD} fiscal period?
 
     - task: |-
-        Calculate `(Unadjusted) EBITDA Margin` of {COMPANY} for {PERIOD} fiscal period,
+        Calculate `(Unadjusted) EBITDA Margin` of {COMPANY} for {PERIOD} fiscal period
         as percentage value according to formula:
-    
+
         `(Unadjusted) EBITDA Margin` = (
-          (`(Unadjusted) Operating Income, a.k.a. Operating Profit` +
+          (`(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))` +
            `Depreciation & Amortization, a.k.a. D&A (of Fixed Assets or Property, Plant & Equipment (PP&E))`)
-          / `(Total) (Net) Revenue(s), a.k.a. (Total) (Net) Sales`
+          / `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
         )
 
 
