--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -192,7 +192,7 @@ op-margin-3y-avg:
 
     - task: >-
         Calculate 3-year average `(Unadjusted) Operating (Income or Profit or Earnings) Margin`
-        by dividing sum of `(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))
+        by dividing sum of `(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))`
         by sum of `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,
         and return division result as percentage value
 
@@ -302,6 +302,36 @@ ebitda-margin:
            `Depreciation & Amortization, a.k.a. D&A (of Fixed Assets or Property, Plant & Equipment (PP&E))`)
           / `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
         )
+
+
+ebitda-margin-3y-avg:
+  task: >-
+    Calculate 3-year average `(Unadjusted) EBITDA Margin` of {COMPANY} as percentage value
+
+  sub-plans:
+    - task: >-
+        What are values in dollars of:
+        - `(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))`; and
+        - `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
+        (or most similar-meaning reported line items to those)
+
+        on one same `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+        (or most similar-meaning statement)
+
+        of {COMPANY} for past 3 fiscal years?
+
+    - task: >-
+        What are values in dollars of `Depreciation & Amortization, a.k.a. D&A (of Fixed Assets or Property, Plant & Equipment (PP&E))`
+        (or most similar-meaning reported line item)
+        on one same `Cash Flow(s) Statement` of {COMPANY} for past 3 fiscal years?
+
+    - task: >-
+        Calculate 3-year average `(Unadjusted) EBITDA Margin`
+        by adding sum of `(Unadjusted) Operating Income, a.k.a. Operating Profit, or Operating Earnings (or Loss(es))`
+        to sum of `Depreciation & Amortization, a.k.a. D&A (of Fixed Assets or Property, Plant & Equipment (PP&E))`,
+        then dividing that combined sum by sum of `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,
+        and return division result as percentage value
 
 
 da-margin:
