--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -237,6 +237,33 @@ op-margin-comp:
         and assess whether `(Unadjusted) Operating (Income or Profit or Earnings) Margin` meaningfully degraded or improved
 
 
+da-margin:
+  task: |-
+    Calculate `Depreciation & Amortization (D&A) Margin` of {COMPANY} for {PERIOD} fiscal period
+    as percentage value according to formula:
+
+    `Depreciation & Amortization (D&A) Margin` = (
+      `Depreciation & Amortization, a.k.a. D&A (of Fixed Assets or Property, Plant & Equipment (PP&E))` /
+      `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
+    )
+
+  sub-plans:
+    - task: >-
+        What is value in dollars of `Depreciation & Amortization, a.k.a. D&A (of Fixed Assets or Property, Plant & Equipment (PP&E))`
+        (or most similar-meaning reported line item)
+        on `Cash Flow(s) Statement` of {COMPANY} for {PERIOD} fiscal period?
+
+    - task: |-
+        What is value in dollars of `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
+        (or most similar-meaning reported line item)
+
+        on `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+        (or most similar-meaning statement)
+
+        of {COMPANY} for {PERIOD} fiscal period?
+
+
 ebitda:
   task: >-
     Calculate `(Unadjusted) Earnings before Interest, Tax, Depreciation & Amortization, a.k.a. EBITDA`
@@ -333,18 +360,6 @@ ebitda-margin-3y-avg:
         then dividing that combined sum by sum of `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,
         and return division result as percentage value
 
-
-da-margin:
-  task:
-    Calculate the depreciation and amortization margin of {COMPANY} for {YEAR}.
-    Depreciation and amortization margin = depreciation and amortization /
-    revenue
-  sub-plans:
-    - task:
-        In dollars, what was the depreciation and amortization in the given
-        fiscal year(s)?
-    - task:
-        In dollars, what was the revenue (net sales) in the given fiscal year(s)
 
 net-profit-margin:
   task:
