--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -361,17 +361,28 @@ ebitda-margin-3y-avg:
         and return division result as percentage value
 
 
-net-profit-margin:
-  task:
-    Calculate the net profit margin of {COMPANY} for {YEAR}. Net profit margin =
-    net income / net sales
+net-margin-3y-avg:
+  task: >-
+    Calculate 3-year average `Net (Income or Profit or Earnings) Margin` of {COMPANY} as percentage value
+
   sub-plans:
-    - task:
-        In dollars, what was the net income in the given fiscal year(s)? income
-        or income statement.
-    - task:
-        In dollars, what was the net sales in the given fiscal year(s)? sales or
-        income statement
+    - task: |-
+        What are values in dollars of:
+        - `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)`; and
+        - `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
+        (or most similar-meaning reported line items to those)
+
+        on one same `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+        (or most similar-meaning statement)
+
+        of {COMPANY} for past 3 fiscal years?
+
+    - task: >-
+        Calculate 3-year average `Net (Income or Profit or Earnings) Margin`
+        by dividing sum of `Net Income, a.k.a. Net Profit, or Net Earnings (or Loss(es)) (Attributable to Shareholders)`
+        by sum of `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,
+        and return division result as percentage value
 
 
 # PROFIT-UTILIZATION / CAPITAL-RETURN METRIC EVALUATION
