--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -15,7 +15,7 @@ financebench_id_03069: da-margin  #
 financebench_id_00222: quick-ratio  #
 financebench_id_04254: ebitda
 financebench_id_00070: work-cap
-financebench_id_02608: net-margin-avg
+financebench_id_02608: net-margin-3y-avg
 financebench_id_00685: gross-margin-comp  #
 financebench_id_04660: work-cap-ratio  #
 financebench_id_00678: gross-margin-comp
@@ -48,4 +48,4 @@ financebench_id_00216: quick-ratio  #
 financebench_id_00215: capital-intensiveness
 financebench_id_06247: days-payable-outstanding  #
 financebench_id_04784: op-margin-comp  #
-financebench_id_06741: ebitda-margin  # TODO: avg
+financebench_id_06741: ebitda-margin-3y-avg
