--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -390,7 +390,7 @@ net-margin-3y-avg:
 
 int-cov-ratio:
   task: >-
-    Calculate `Interest Coverage Ratio` of {COMPANY} for {PERIOD} fiscal period as decimal value according to formula
+    Calculate `Interest Coverage Ratio` of {COMPANY} for {PERIOD} fiscal period as decimal value according to formula:
 
     `Interest Coverage Ratio` = `Earnings before Interest & Tax, a.k.a. EBIT` / `Interest Expense`
 
@@ -416,17 +416,37 @@ int-cov-ratio:
          it is conventional to say `Interest Coverage Ratio` is zero)
 
 
-effective-tax-rate:
-  task:
-    Calculate the effective tax rate of {COMPANY} for {YEAR}. Effective tax rate
-    = income tax expense / income before tax
+effective-tax-rate-comp:
+  task: >-
+    Assess change in `Effective (Income) Tax Rate` of {COMPANY}
+    from corresponding one-year-preceding previous annual fiscal period to current {PERIOD} annual fiscal period
+
   sub-plans:
-    - task:
-        In dollars, what was the provision for income taxes in the given fiscal
-        year(s)?
-    - task:
-        In dollars, what was the income from continuing operations before income
-        taxes in the given fiscal year(s)?
+    - task: >-
+        Calculate `Effective (Income) Tax Rate` of {COMPANY} for {PERIOD} fiscal period as percentage value according to formula:
+
+        `Effective (Income) Tax Rate` = `(Income) Tax Expense` / `Income or Profit or Earnings (or Loss(es)) before (Income) Tax(es)`
+
+        for following two annual fiscal periods:
+        - one-year-before previous annual fiscal period preceding {PERIOD}; and
+        - {PERIOD} annual fiscal period
+
+      sub-plans:
+        # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency
+        - task: |-
+            What are values in dollars of:
+            - `(Income) Tax Expense`; and
+            - `Income or Profit or Earnings (or Loss(es)) before (Income) Tax(es)`
+            (or most similar-meaning reported line items to those)
+
+            on one same `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+            or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+            (or most similar-meaning statement)
+
+            of {COMPANY} for following two annual fiscal periods:
+            - one-year-before previous annual fiscal period preceding {PERIOD}; and
+            - {PERIOD} annual fiscal period?
+
 
 dividend-payout-ratio:
   task:
