--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -19,7 +19,7 @@ financebench_id_02608: net-margin-3y-avg
 financebench_id_00685: gross-margin-comp  #
 financebench_id_04660: work-cap-ratio  #
 financebench_id_00678: gross-margin-comp
-financebench_id_00585: effective-tax-rate
+financebench_id_00585: effective-tax-rate-comp  #
 financebench_id_03473: roa  #
 financebench_id_09724: cogs-margin  #
 financebench_id_06272: dividend-payout-ratio
