--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -31,7 +31,7 @@ financebench_id_00790: capital-intensiveness
 financebench_id_04103: cash-conversion-cycle
 financebench_id_03471: work-cap-ratio  #
 financebench_id_04854: free-cash-flow
-financebench_id_10136: retention-ratio
+financebench_id_10136: retention-ratio  #
 financebench_id_10499: inv-turnover-ratio  #
 financebench_id_04412: asset-turnover-ratio  #
 financebench_id_03031: work-cap  #
