--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -22,6 +22,7 @@ asset-turnover-ratio:
 
         of {COMPANY} for {PERIOD} annual fiscal period?
 
+    # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency;
     # retrieve individual starting & ending balance values only, without taking simple arithmetic average
     # because RAG LMs may not be good at calculation & mathematical reasoning
     - task: |-
@@ -507,9 +508,9 @@ retention-ratio:
 work-cap:
   task: |-
     Calculate `(Net) Working Capital` of {COMPANY} as at {PERIOD} fiscal period end, in dollars according to formula:
-    
+
     `(Net) Working Capital` = `(Total) Current Assets` - `(Total) Current Liabilities`
-    
+
     and assess whether `(Net) Working Capital` is positive or negative
 
   sub-plans:
@@ -528,6 +529,9 @@ work-cap-ratio:
     `Working Capital Ratio` = `(Total) Current Assets` / `(Total) Current Liabilities`
 
   sub-plans:
+    # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency;
+    # retrieve individual starting & ending balance values only, without taking simple arithmetic average
+    # because RAG LMs may not be good at calculation & mathematical reasoning
     - task: |-
         What are values in dollars of:
         - `(Total) Current Assets`; and
